SDM-2641: Add InputAndArchiveAviationMessage to be used as payload and generalize MessagePopulatingContext to MessageProcessorContext.